Fix ShiftAvailability method. Add Entities and Dtos for it. Regenerate swagger docs.
